2007-10-17  Darin Adler  <darin@apple.com>

        Reviewed by Mark Rowe.

        - test for http://bugs.webkit.org/show_bug.cgi?id=15543
          <rdar://problem/5545639> REGRESSION (r26697):
          GoogleDocs: Can't create new documents or open existing ones

        * fast/js/regexp-non-character-expected.txt: Added.
        * fast/js/regexp-non-character.html: Added.
        * fast/js/resources/regexp-non-character.js: Added.

2007-10-17  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Harrison.

        <rdar://problem/5481523> 
        GoogleDocs: Safari hangs when indenting a particular table twice

        * editing/execCommand/5481523.html: Added.
        * platform/mac/editing/execCommand/5481523-expected.checksum: Added.
        * platform/mac/editing/execCommand/5481523-expected.png: Added.
        * platform/mac/editing/execCommand/5481523-expected.txt: Added.

2007-10-16  Alice Liu  <alice.liu@apple.com>

        removing fixed tests

        * platform/win/Skipped:

2007-10-16  Alice Liu  <alice.liu@apple.com>

        Rubber-stamped by Adele.

        fixing incorrect usage of JS String search method.

        * editing/deleting/delete-by-word-001.html:
        * editing/deleting/delete-by-word-002.html:
        * fast/forms/input-text-option-delete.html:
        * fast/forms/listbox-onchange.html:
        * fast/forms/listbox-selection.html:

2007-10-16  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Layout tests for http://bugs.webkit.org/show_bug.cgi?id=15478
        Declare vars and functions iteratively upon entering an execution context

        * fast/js/function-declarations-expected.txt: Added.
        * fast/js/function-declarations.html: Added.
        * fast/js/var-declarations-expected.txt: Added.
        * fast/js/var-declarations.html: Added.

2007-10-16  Alice Liu  <alice.liu@apple.com>

        Reviewed by Adele.
